YAS-CA/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>Delimiter__c</fullName>
        <defaultValue>&apos;|&apos;</defaultValue>
        <label>Delimiter</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <label>Rule</label>
        <referenceTo>Rule__c</referenceTo>
        <relationshipLabel>Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>XML_Format__c</fullName>
        <label>XML Format</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rule__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>